<?xml version="1.0"?>
<package format="3">
  <name>smarty_arm_interface</name>
  <version>0.0.0</version>
  <description>The smarty_arm_interface package for ROS2</description>

  <maintainer email="abbas.a@northeastern.edu">xnuc0</maintainer>
  <license>TODO</license>

  <!-- Example of a URL tag -->
  <!-- <url type="website">http://wiki.ros.org/smarty_arm_interface</url> -->

  <!-- Example of an author tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- ROS2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>smarty_arm_msg</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
